# portfolio-site

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
apps/api/: main.py
apps/api/routes/: chat.py  config.py  leads.py  search.py  ui.py
apps/api/static/: demo.html  index.html
apps/api/static/css/: portfolio.css  style.css
apps/api/static/js/: app.js  portfolio.js
core/agents/builtins/: portfolio_agent.py  reddit_agent.py  research_agent.py
core/shared/: config.py
core/tools/builtins/: exa_search.py  reddit_search.py  tavily_search.py
data/knowledge/: metrics.md  projects.md  resume.md
docs/elevenlabs/: agent-setup-guide.txt  knowledge-base.txt  system-prompt.txt
docs/superpowers/plans/: 2026-03-26-portfolio-agent-site.md
tests/integration/: test_elevenlabs_agent.json
